force-app/main/default/objects/PgM_Governance_Meeting__c/PgM_Governance_Meeting__c.object-meta.xml
<CustomObject>
    <label>Governance Meeting</label>
    <nameField>
        <displayFormat>GM-{0000}</displayFormat>
        <label>Meeting Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Governance Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>