force-app/main/default/objects/PgM_Governance_Meeting__c/fields/PgM_Governance_Committee__c.field-meta.xml
<CustomField>
    <fullName>PgM_Governance_Committee__c</fullName>
    <label>Governance Committee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PgM_Team__c.Name</field>
            <operation>contains</operation>
            <value>Architecture Review Board</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PgM_Team__c</referenceTo>
    <relationshipName>Architecture_Review_Board_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>