force-app/main/default/objects/PgM_Governance_Meeting__c/fields/PgM_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>PgM_Meeting_Date__c</fullName>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>