force-app/main/default/objects/PgM_Governance_Meeting__c/fields/PgM_Meeting_Minutes__c.field-meta.xml
<CustomField>
    <fullName>PgM_Meeting_Minutes__c</fullName>
    <label>Meeting Minutes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>