force-app/main/default/objects/PgM_Governance_Meeting__c/fields/PgM_Session_Recording_Link__c.field-meta.xml
<CustomField>
    <fullName>PgM_Session_Recording_Link__c</fullName>
    <label>Session Recording Link</label>
    <type>Url</type>
</CustomField>