force-app/main/default/objects/PgM_Governance_Meeting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PgM_Governance_Committee__c</columns>
    <columns>PgM_Meeting_Date__c</columns>
    <columns>PgM_Session_Recording_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>