force-app/main/default/objects/PgM_Governance_Meeting__c/listViews/Architecture_Review_Board_Meetings.listView-meta.xml
<ListView>
    <fullName>Architecture_Review_Board_Meetings</fullName>
    <columns>NAME</columns>
    <columns>PgM_Governance_Committee__c</columns>
    <columns>PgM_Meeting_Date__c</columns>
    <columns>PgM_Session_Recording_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PgM_Governance_Committee__c</field>
        <operation>contains</operation>
        <value>Architecture Review Board</value>
    </filters>
    <label>Architecture Review Board Meetings</label>
</ListView>