force-app/main/default/objects/PgM_Governance_Meeting__c/listViews/Design_Authority_Meetings.listView-meta.xml
<ListView>
    <fullName>Design_Authority_Meetings</fullName>
    <columns>NAME</columns>
    <columns>PgM_Governance_Committee__c</columns>
    <columns>PgM_Meeting_Date__c</columns>
    <columns>PgM_Session_Recording_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PgM_Governance_Committee__c</field>
        <operation>contains</operation>
        <value>Design Authority Board</value>
    </filters>
    <label>Design Authority Meetings</label>
</ListView>